# FFmpegAndroid

.github/workflows/: main.yml
Live/: CMakeLists.txt
Live/src/main/cpp/rtmp/: CMakeLists.txt
NextPlayer/src/main/java/com/frank/next/player/: NextPlayer.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/metadata/: metadata_util.c
engine/: CMakeLists.txt
engine/common/: CMakeLists.txt
engine/decode/: CMakeLists.txt  VideoDecoder.h
engine/demux/: CMakeLists.txt
engine/player/common/: NextConfig.cpp  NextConfig.h
engine/render/: CMakeLists.txt  VideoRenderFactory.h
engine/render/opengl/android/: EglContext.cpp
engine/render/opengl/filter/: OpenglFilter.cpp
